caller html/css: form label 'Callback' -> 'Your ID'

--- a/webroot/user/index.html
+++ b/webroot/user/index.html
@@ -566,7 +566,7 @@ input:invalid {
 		<br>
 
 		<label class="formlabel" id="idSelectLabel" for="idSelect"
-			style="margin-left:0;margin-top:6px; width:84px; display:none;">Callback:</label>
+			style="margin-left:0;margin-top:6px; width:84px; display:none;">Your ID:</label>
 		<select id="idSelect" class="select" onchange="changeId(this)"></select>
 		<br>
 
